手机端查询按钮没有居中问题

--- a/registration_search.html
+++ b/registration_search.html
@@ -40,7 +40,7 @@
 						</div>																									
 					</div>
 				</div>				
-				<button class="text-center boxR submit-registration btn btn-success tra-fast" type="submit">点击查询</button>
+				<button class=" boxR submit-registration btn btn-success tra-fast mc" type="submit">点击查询</button>
 				<a href="fill_registration information.html" class="text-center return-fill">返回报名注册页面</a>
 			</div>
 		</div>
