按钮居中问题

--- a/fill_registration information.html
+++ b/fill_registration information.html
@@ -70,7 +70,7 @@
 				<div class="registration-prompt text-center">
 					报名成功后，将生成入会签到二维码，请妥善保存！
 				</div>
-				<button class=" boxR submit-registration btn btn-success tra-fast" type="submit">提交参会报名表</button>
+				<button class=" boxR btn btn-success tra-fast submit-registration" type="submit">提交参会报名表</button>
 			</div>
 		</div>
 	</div>
