按钮居中问题

--- a/registration_search.html
+++ b/registration_search.html
@@ -26,7 +26,7 @@
 			<div class="row mc registration-title row-public">
 				<div class="titleTag"><span>查询报名信息</span></div>
 			</div>
-			<div class="registration-infor mc">
+			<div class="registration-infor mc text-center">
 				<div class="panel">
 					<div class="tableClearType vaM_EE">
 						<div class="tableSys">
