--- a/registration_success.html
+++ b/registration_success.html
@@ -25,10 +25,9 @@
 		</div>
 		<div class="container-fluid">
 			<div class="registration-erweima">
-				<div class="registrationCode"><img src="image/registrationCode.jpg" alt="报名成功二维码" /></div>
-				<a href="#" class="text-center codedown">点击下载</a>
+				<div class="registrationCode"><img src="image/registrationCode.jpg" alt="报名成功二维码" title="请保存您的二维码"/></div>
 			</div>
-			<div class="success-prompt text-center"><i class="glyphicon glyphicon-ok ico-text"></i>您已报名成功，请点击下载此二维码，作为入会凭证！</div>
+			<div class="success-prompt text-center"><i class="glyphicon glyphicon-ok ico-text"></i>您已报名成功，请保存此二维码，作为入会凭证！</div>
 		</div>
 	</div>
 	<div class="registration-copyright text-center">
