二维码保存小提示，用户友好

--- a/registration_success.html
+++ b/registration_success.html
@@ -27,7 +27,7 @@
 			<div class="registration-erweima">
 				<div class="registrationCode"><img src="image/registrationCode.jpg" alt="报名成功二维码" title="请保存您的二维码"/></div>
 			</div>
-			<div class="success-prompt text-center"><i class="glyphicon glyphicon-ok ico-text"></i>您已报名成功，请保存此二维码，作为入会凭证！</div>
+			<div class="success-prompt text-center"><i class="glyphicon glyphicon-ok ico-text"></i>您已报名成功，请保存此二维码，作为入会凭证！<br><span>小提示：移动端用户请长按图片保存</span></div>
 		</div>
 	</div>
 	<div class="registration-copyright text-center">
