会议互动页面

--- a/agenda.html
+++ b/agenda.html
@@ -23,8 +23,23 @@
 </script>
 </head>
 <body>
-	<div class="agenda-banner-container ofH">
-		<img src="image/agendaBG.jpg" alt="" class="img-responsive mc"/>
+	<div class="agenda-banner-container ofH" style="background-image: url(image/MTBG.png);">
+		<div class="banner-cover"></div>
+		<div class="container">
+			<div class="agenda-banner-text">
+				<div class="agenda-banner-title">
+					2015年国际创新探讨会议
+				</div>
+				<div class="agenda-banner-time">
+					<h2>活动时间：</h2>
+					<div>2015-10-27 09:00 ~ 2015-12-31 13:55</div>
+				</div>
+				<div class="agenda-banner-address">
+					<h2>活动地点：</h2>
+					<div>江苏省 无锡市国家工业设计园1栋3楼万象设计 </div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="meeting-interaction-nav">		
 			<ul class="meeting-interaction-navigation mc">
@@ -49,8 +64,8 @@
 					<span>1.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -63,8 +78,8 @@
 					<span>2.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -77,8 +92,8 @@
 					<span>3.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -91,8 +106,8 @@
 					<span>4.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -105,8 +120,8 @@
 					<span>5.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -119,8 +134,8 @@
 					<span>6.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -133,8 +148,8 @@
 					<span>7.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -147,8 +162,8 @@
 					<span>8.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
@@ -161,8 +176,8 @@
 					<span>9.</span>
 				</div>
 				<div class="agenda-list-detail">
-					<div class="agenda-title"><span class="agenda-time">09:30</span>议程议程议程议程1</div>
-					<p class="textCut">
+					<div class="agenda-title"><label class="mr10 label label-primary">09:30</label>议程议程议程议程1</div>
+					<p class="">
 						议程详情议程详情议程详情议程详情议程详情议程详情议程
 议程详情议程详情议程详情议程详情议程详情详情
 					</p>
