--- a/topic.html
+++ b/topic.html
@@ -23,8 +23,23 @@
 </script>
 </head>
 <body>
-	<div class="agenda-banner-container ofH">
-		<img src="image/agendaBG.jpg" alt="" class="img-responsive mc"/>
+	<div class="agenda-banner-container ofH" style="background-image: url(image/MTBG.png);">
+		<div class="banner-cover"></div>
+		<div class="container">
+			<div class="agenda-banner-text">
+				<div class="agenda-banner-title">
+					2015年国际创新探讨会议
+				</div>
+				<div class="agenda-banner-time">
+					<h2>活动时间：</h2>
+					<div>2015-10-27 09:00 ~ 2015-12-31 13:55</div>
+				</div>
+				<div class="agenda-banner-address">
+					<h2>活动地点：</h2>
+					<div>江苏省 无锡市国家工业设计园1栋3楼万象设计 </div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="meeting-interaction-nav">		
 			<ul class="meeting-interaction-navigation mc">
