--- a/topic_detail.html
+++ b/topic_detail.html
@@ -29,8 +29,23 @@ $(function(){
 </script>
 </head>
 <body class="registration">
-	<div class="agenda-banner-container ofH">
-		<img src="image/agendaBG.jpg" alt="" class="img-responsive mc"/>
+	<div class="agenda-banner-container ofH" style="background-image: url(image/MTBG.png);">
+		<div class="banner-cover"></div>
+		<div class="container">
+			<div class="agenda-banner-text">
+				<div class="agenda-banner-title">
+					2015年国际创新探讨会议
+				</div>
+				<div class="agenda-banner-time">
+					<h2>活动时间：</h2>
+					<div>2015-10-27 09:00 ~ 2015-12-31 13:55</div>
+				</div>
+				<div class="agenda-banner-address">
+					<h2>活动地点：</h2>
+					<div>江苏省 无锡市国家工业设计园1栋3楼万象设计 </div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="meeting-interaction-nav">		
 			<ul class="meeting-interaction-navigation mc">
@@ -66,7 +81,7 @@ $(function(){
 				<li class="reply-list-container">
 					<div class="reply-list">
 						<div class="reply-list-LBox">
-							<div class="reply-photo" style="background-image: url(image/tolerant_photo.jpg);"></div>
+							<span class="glyphicon glyphicon-comment reply-ico"></span>
 						</div>
 						<div class="reply-detail">
 							<div class="reply-name">
@@ -79,7 +94,7 @@ $(function(){
 				<li class="reply-list-container">
 					<div class="reply-list">
 						<div class="reply-list-LBox">
-							<div class="reply-photo" style="background-image: url(image/tolerant_photo.jpg);"></div>
+							<span class="glyphicon glyphicon-comment reply-ico"></span>
 						</div>
 						<div class="reply-detail">
 							<div class="reply-name">
@@ -92,7 +107,7 @@ $(function(){
 				<li class="reply-list-container">
 					<div class="reply-list">
 						<div class="reply-list-LBox">
-							<div class="reply-photo" style="background-image: url(image/tolerant_photo.jpg);"></div>
+							<span class="glyphicon glyphicon-comment reply-ico"></span>
 						</div>
 						<div class="reply-detail">
 							<div class="reply-name">
@@ -105,7 +120,7 @@ $(function(){
 			</ul>
 			<div id="replyBox" class="reply-box">
 				<div class="reply-box-left">
-					<div class="reply-photo" style="background-image: url(image/tolerant_photo.jpg);"></div>
+					<span class="glyphicon glyphicon-comment reply-ico"></span>
 				</div>
 				<div class="reply-box-center">
 					<textarea placeholder="请输入文字" class="boxR"></textarea>
